trunk/Archive2/b5/4a5c0f73a3f559/output
main.cpp:5:12: warning: returning reference to local temporary object [-Wreturn-stack-address]
    return 1;
           ^
main.cpp:10:16: error: binding of reference to type 'const int' to a value of type 'volatile int' drops qualifiers
    const int& i = bar();
               ^   ~~~~~
1 warning and 1 error generated.
